# bashbasicsbyvk

./: MANIFEST.in  README.md  js_audit.shortcut  setup.cfg  setup.py
script/: o  xtract
script/actions/: bashbasicsbyvk_copy  bashbasicsbyvk_copy.sh  bashbasicsbyvk_create  bashbasicsbyvk_map
script/actions/othertools/: _3bvk_gen_sql_core  _3bvk_gitpush_core  _3bvk_py_audit_core  _3bvk_upgrade_core  _3bvk_xtract_core
script/actions/othertools/js_audit/: 3bvk_js_audit_1b.py  3bvk_js_audit_1c.py  3bvk_js_audit_1d.py  3bvk_js_audit_1e.py  3bvk_js_audit_1f.py  3bvk_js_audit_2.py  3bvk_js_audit_core  3bvk_js_audit_helpers.py  _3bvk_js_audit_1a.py  _3bvk_js_audit_1b.py  _3bvk_js_audit_1c.py  _3bvk_js_audit_1d.py  _3bvk_js_audit_1e.py  _3bvk_js_audit_1f.py  _3bvk_js_audit_2.py  _3bvk_js_audit_constants.py  _3bvk_js_audit_core  _3bvk_js_audit_helpers.py
script/file/: bashbasicbyvk_shortpath.sh  bashbasicsbyvk_fileapi.sh  bashbasicsbyvk_find.sh  bashbasicsbyvk_help.sh  bashbasicsbyvk_help.xlsx  bashbasicsbyvk_mapper.sh  bashbasicsbyvk_run.sh  bashbasicsbyvk_settings.sh  bashbasicsbyvk_transfer.sh
script/file/settings/: bashbasicsbyvk_colors.sh  bashbasicsbyvk_coresettings.sh  bashbasicsbyvk_displayer.sh  bashbasicsbyvk_hidefiles.sh  bashbasicsbyvk_importnano.sh  bashbasicsbyvk_indexmode.sh  bashbasicsbyvk_settings.sh
