[metadata]
name = bashbasicsbyvk
version = 0.0
description = bashbasicsbyvk is a lightweight, open-source collection of Bash-Python scripts made to optimize workflows and file management in shell environment. It offers comprehensive, high-performance file management with run, copy, erase, delete, overwrite, rename, move, batch-create and batch-delete, move, copy, organise, find functions via simple interactive call, allowing you to do anything without confusion. The integrated xtract function automates extraction of HTML tables and links from single and multi-page sites, streamlining data harvesting from catalogs, reports and dashboards.
author = vk datta
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vkdatta/bashbasicsbyvk
license = MIT

[options]
scripts =
    script/actions/bashbasicsbyvk_copy
    script/actions/bashbasicsbyvk_erase
    script/actions/bashbasicsbyvk_overwrite
    script/actions/bashbasicsbyvk_delete
    script/actions/bashbasicsbyvk_create
    script/actions/bashbasicsbyvk_open 
    script/actions/othertools/xtract
    script/actions/othertools/gen_sql
    script/o
    script/file/bashbasicsbyvk_run.sh
    script/file/bashbasicsbyvk_organise.sh
    script/file/bashbasicsbyvk_find.sh
    script/file/bashbasicsbyvk_transfer.sh
    script/file/bashbasicsbyvk_mapper.sh
    script/file/settings/bashbasicsbyvk_settings.sh
    script/file/settings/bashbasicsbyvk_colors.sh
    script/file/settings/bashbasicsbyvk_coresettings.sh
    script/file/settings/bashbasicsbyvk_hidefiles.sh
    script/file/settings/bashbasicsbyvk_importnano.sh
    script/file/settings/bashbasicsbyvk_indexmode.sh

python_requires = >=3.6
packages = find:

[options.packages.find]
where = .

[classifiers]
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent
