[metadata]
name = bashbasicsbyvk
version = 0.0
description = bashbasicsbyvk is a lightweight, open-source collection of Bash-Python scripts made to optimize workflows and file management in shell environment. It offers comprehensive, high-performance file management with run, copy, erase, delete, overwrite, rename, move, batch-create and batch-delete, move, copy, organise, find functions via simple interactive call, allowing you to do anything without confusion. The integrated xtract function automates extraction of HTML tables and links from single and multi-page sites, streamlining data harvesting from catalogs, reports and dashboards.
author = vk datta
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vkdatta/bashbasicsbyvk
license = MIT

python_requires = >=3.6
packages = find:

[options.packages.find]
where = .

[classifiers]
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent
